Resources/public/css/halloLiipStyle.css
/* Before editing */
/******************/

[contenteditable]:hover{
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    cursor: pointer;
}

[contenteditable] {
    position: relative;
    outline: none;
    padding: 5px 5px 0;
    border-left: 1px dotted #fff;
    border-right: 1px dotted #fff;
    overflow: hidden;
}

[contenteditable] p{
    padding: 0 0 15px;
}

.editButton{
    outline: none;
    position: absolute;
    top: 10px;
    right: 0;
    padding: 3px 25px 2px 10px;
    color: #fff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.6;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.8) url('/bundles/liipvie/img/editIcon.png') no-repeat 36px 3px;
}

.inEditMode .editButton{
    display: none;
}



/* While editing */
/*****************/

[contenteditable].inEditMode{
    cursor: auto;
    outline: 3px solid black;
}

.hallotoolbar {
    z-index: 500;
}

/* Toolbar General */
/*******************/

.hallotoolbar .ui-state-default{ border: none; }

.hallotoolbar .ui-button{
    margin: 0 0 0 1px;
    color: #fff;
    box-shadow: none;
    height: 33px;
    width: 26px;
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
}

.hallotoolbar .ui-button-text-only .ui-button-text{
    padding: 0;
    margin: 0;
}

.hallotoolbar .ui-button-text .ui-button-text{
    display: block;
    height: 22px;
    width: 17px;
    margin: 0;
    padding: 0;
    text-indent: 1000px;
    overflow: hidden;
}

.hallotoolbar .ui-buttonset{
    display: inline-block;
    margin: 0;
}



/* Button Rowa */
/***************/

.hallotoolbar .halloButtonrow {
    background-color: #000000;
}

.hallotoolbar .halloButtonrow-1 {
    padding: 0px 5px;
}

/* Only apply this block if there is another line in the toolbar */
.hallotoolbar .halloButtonrow-1:not(:last-child) {
    background-color: #272727;
    text-align: right;
    width: auto;
    margin-left: 890px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}


.hallotoolbar .halloButtonrow-1:last-child {
    border-top-right-radius: 5px;
}

.hallotoolbar .halloButtonrow:last-of-type {
    border-top-left-radius: 5px;
}

.hallotoolbar .halloButtonrow-2 .ui-buttonset {
    background: url('/bundles/liipvie/img/stripe.png') no-repeat right 5px;
    padding: 0 6px 0 5px;
}

.hallotoolbar .ui-buttonset:last-child{
    border-right: 0;
}

.hallotoolbar .ui-buttonset:last-child{ background: none; }



/* Buttons */
/***********/

/* Format */
.hallotoolbar .ui-buttonset .bold_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -144px -35px; }

.hallotoolbar .ui-buttonset .bold_button.ui-state-clicked, .hallotoolbar .ui-buttonset .bold_button.ui-state-hover { background-position: -144px -2px; }

.hallotoolbar .ui-buttonset .italic_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -171px -35px; }
.hallotoolbar .ui-buttonset .italic_button.ui-state-clicked, .hallotoolbar .ui-buttonset .italic_button.ui-state-hover { background-position: -171px -2px; }

.hallotoolbar .ui-buttonset .underline_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -199px -35px; }
.hallotoolbar .ui-buttonset .underline_button.ui-state-clicked, .hallotoolbar .ui-buttonset .underline_button.ui-state-hover { background-position: -199px -2px; }

/* Lists */
.hallotoolbar .ui-buttonset .Unordered_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -254px -36px; }
.hallotoolbar .ui-buttonset .Unordered_button.ui-state-clicked, .hallotoolbar .ui-buttonset .Unordered_button.ui-state-hover { background-position: -254px -2px; }
/* Justify */
.hallotoolbar .ui-buttonset .Left_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -298px -36px; }
.hallotoolbar .ui-buttonset .Left_button.ui-state-clicked, .hallotoolbar .ui-buttonset .Left_button.ui-state-hover { background-position: -298px -2px; }

.hallotoolbar .ui-buttonset .Center_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -327px -36px; }
.hallotoolbar .ui-buttonset .Center_button.ui-state-clicked, .hallotoolbar .ui-buttonset .Center_button.ui-state-hover { background-position: -327px -2px; }

.hallotoolbar .ui-buttonset .Right_button { background: url('/bundles/liipvie/img/buttons.png') no-repeat -357px -36px; }
.hallotoolbar .ui-buttonset .Right_button.ui-state-clicked, .hallotoolbar .ui-buttonset .Right_button.ui-state-hover { background-position: -357px -2px; }

/* Paragraph & Heading */
.hallotoolbar .ui-buttonset .p_button { background: url('/bundles/liipvie/img/headings.png') no-repeat -4px -35px; }
.hallotoolbar .ui-buttonset .p_button.ui-state-clicked, .hallotoolbar .ui-buttonset .p_button.ui-state-hover { background-position: -4px -2px; }

.hallotoolbar .ui-buttonset .h1_button { background: url('/bundles/liipvie/img/headings.png') no-repeat -31px -35px; }
.hallotoolbar .ui-buttonset .h1_button.ui-state-clicked, .hallotoolbar .ui-buttonset .h1_button.ui-state-hover { background-position: -31px -2px; }

.hallotoolbar .ui-buttonset .h2_button { background: url('/bundles/liipvie/img/headings.png') no-repeat -58px -35px; }
.hallotoolbar .ui-buttonset .h2_button.ui-state-clicked, .hallotoolbar .ui-buttonset .h2_button.ui-state-hover { background-position: -58px -2px; }

.hallotoolbar .ui-buttonset .h3_button { background: url('/bundles/liipvie/img/headings.png') no-repeat -85px -35px; }
.hallotoolbar .ui-buttonset .h3_button.ui-state-clicked, .hallotoolbar .ui-buttonset .h3_button.ui-state-hover { background-position: -85px -2px; }

/* Link */
.hallotoolbar .ui-buttonset .anchor_button { background: url('/bundles/liipvie/img/imagelink.png') no-repeat -91px -36px; }
.hallotoolbar .ui-buttonset .anchor_button.ui-state-clicked, .hallotoolbar .ui-buttonset .anchor_button.ui-state-hover { background-position: -91px -1px; }

/* Image */
.hallotoolbar .ui-buttonset .image_button{ background: url('/bundles/liipvie/img/imagelink.png') no-repeat -13px -36px; }
.hallotoolbar .ui-buttonset .image_button.ui-state-clicked, .hallotoolbar .ui-buttonset .image_button.ui-state-hover { background-position: -13px -1px; }



/* Dialog styling */
/******************/

.ui-dialog {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    border: 3px solid black;
    border-radius: 5px;
    overflow: visible;
}

.ui-dialog .ui-dialog-titlebar {
    background: #000000;
    color: white;
    padding: 5px 10px;
    border: none;
}

.ui-dialog .ui-dialog-title {
    font-weight: normal;
    text-shadow: none;
}

/* Close button */
.ui-dialog .ui-dialog-titlebar-close {
    background: url('/bundles/liipvie/img/close_button.png') no-repeat 0 -25px;
    top: -2px;
    right: -11px;
    width: 25px;
    height: 25px;
}

.ui-dialog .ui-dialog-titlebar-close:hover {
    background-position: 0 0;
}

.ui-dialog input[type="submit"] {
    border: 1px solid #01add2;
    height: 30px;
    position: relative;
    background-color: #01add2;
    color: white;
    border-radius: 0 3px 3px 0;
    box-shadow: none;
}

/* Drag n Drop */

[contenteditable] .tmp {
    opacity: 0.3
}

[contenteditable] .tmpBig{
    background-color: #ffffff;
    width: 98%;
    height: 2px;
    margin: 0 auto 10px auto;
    border-top: 1px solid #1cb8d6;
    border-bottom: 1px solid #1cb8d6;
    opacity: 1;
    padding-bottom: 10px;
}

.bigBlueOverlay, .smallDottedOverlay {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(28, 184, 214, 0.4);
}

.blueOverlayRight{
    display : block;
    border-right : 3px dashed rgb(28, 184, 214);
    border-left : none;
}

.blueOverlayLeft{
    display : block;
    border-left : 3px dashed rgb(28, 184, 214);
    border-right : none;
}

.smallDottedOverlay{
    background: none;
}

.smallDottedOverlayLeft{
   border-right : 3px dashed rgb(28, 184, 214);
}

.smallDottedOverlayRight{
    border-left : 3px dashed rgb(28, 184, 214);
}

.ui-draggable{
    cursor: move;
}

.ui-draggable-dragging{
    border: 2px solid black;
}

.customHelper{
    background-size: cover;
    width: 100px;
    height: 100px;
    z-index: 1005;
}

